# annapurna

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.postgres  README.md  api_server.py  nutrition_tracker.sqlite3  plan.md  plan.md.bak  pyproject.toml
mcp-bearer-token/: grocey.jpg.b64  mcp_starter.py  mcp_starter.py.bak  nutrition_log.txt  nutrition_totals.txt  nutrition_tracker.sqlite3
nutrition_tracker/: create_tables.py  db.py  models.py  tracker.py  tracker.py.bak  tracker.py.bak2  tracker.py.bak3
